--- a/web 2.0/formulario_registro.html
+++ b/web 2.0/formulario_registro.html
@@ -36,6 +36,18 @@
     <form id="formulario" name="registro" action="formulario_registro.php" method="post" onsubmit="return validarTodo();">
         <h1>Formulario de registro:</h1>
 
+        <p>Nota: todos los campos son obligatorios.
+            <ul>
+                <li>El nombre debe llevar al menos un apellido separado del nombre por un espacio.</li>
+                <li>Debes ser mayor de 16 años para inscribirte al gimnasio.</li>
+                <li>El teléfono debe ser de España, de 9 números.</li>
+                <li>Debes introducir un email válido. Ejemplo: email_1@servidor.es</li>
+                <li>La contraseña debe ser de entre 8 y 16 caracteres e incluir al menos: una letra minúscula y otra mayúscula, un número, y uno de estos caracteres: !,@,#,$,%,^,&,*.</li>
+                <li>Debes elegir al menos una de las 4 actividades.</li>
+            </ul>
+
+        </p>
+
         <div class="fila">
             <div class="izquierda">
                 <label for="nombre" required>Nombre completo:</label>  
