--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
 
     <main class="centrarMain">
       <section class="contenidoMain">
-          <div><h2 class="logo">Fitness</h2></div>
+          <div><h1 class="logo">Fitness</h1></div>
           <div><h2 class="logo">Hub<span class="puntoLogo">.</span></h2><br><p>No Pain No Gain</p></div>
       </section>
 
@@ -47,7 +47,7 @@
         <h2>Connect</h2>
             <nav class="centrarFlex">
                 <div class="centrarFlex">
-                    <svg role="logo" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <svg role="img" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
                       </svg>
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="centrarFlex">
-                    <svg role="logo" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <svg role="img" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                         <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                         <rect x="4" y="4" width="16" height="16" rx="4" />
                         <circle cx="12" cy="12" r="3" />
@@ -66,6 +66,16 @@
                 </div>
             </nav>
     </section>
+
+    <a href="http://www.w3.org/WAI/WCAG1AAA-Conformance"
+	title="Explicación del Nivel Triple-A de 
+	Conformidad">
+<img height="32" width="88" 
+	src="http://www.w3.org/WAI/wcag1AAA"
+	alt="Icono de conformidad con el Nivel Triple-A, 
+	de las Directrices de Accesibilidad para el 
+	Contenido Web 1.0 del W3C-WAI"></a>
+
 </footer>
 
 </body>
